<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregar_entienda">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="185dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="470dp"
            android:layout_height="139dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtCodigoTie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="@string/cod_producto"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtProductoTie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPrecioTie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:hint="@string/marca"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btnGuardarTie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/guardar"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnMostrarTie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:src="@android:drawable/ic_menu_revert"
        app:backgroundTint="#000000"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />
</RelativeLayout>