<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregar_enmascotas">
    <androidx.cardview.widget.CardView
        android:id="@+id/crvFoto"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp">


        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/foto"
            android:src="@drawable/camara" />
    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/txtCodigoMasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/cod_producto"
        android:layout_below="@id/crvFoto"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtNombreMasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/nombre"
        android:layout_below="@id/crvFoto"
        android:importantForAutofill="no"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/txtMarcaMasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:hint="@string/marca"
        android:layout_below="@id/crvFoto"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtPrecioMasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:hint="@string/precio"
        android:inputType="text"
        android:layout_below="@id/crvFoto"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnGuardarMasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/guardar"
        android:textSize="18sp"
        android:layout_below="@id/crvFoto"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnMostrarMasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:src="@android:drawable/ic_menu_revert"
        app:backgroundTint="#000000"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />
</RelativeLayout>