<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/atras"
        android:contentDescription="@string/todo" />
    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        app:cardCornerRadius="150dp"
        android:layout_marginStart="50dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/fotoperfil"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_dialog_info" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblToChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/tiendamascotas"
        android:layout_marginStart="60dp" />

    <ListView
        android:id="@+id/ltsChats"
        android:background="@drawable/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtMsg"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:divider="@null"
        android:stackFromBottom="true" />

    <EditText
        android:id="@+id/txtMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:hint="@string/escribe_un_mensaje"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/send"
        android:layout_alignParentEnd="true" />
</RelativeLayout>